--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       const text = await response.text();
 
       // Separamos por líneas
-      const lines = text.trim().split('\n');
+      const lines = text.trim().split('\n'); 
       // Primera línea: cabeceras
-      const headers = lines[0].split(',');
+      const headers = lines[0].split(';'); // <-- Aquí cambiamos a split(';')
       // Resto de líneas: datos
       const data = lines.slice(1).map(line => {
-        const values = line.split(',');
+        const values = line.split(';'); // <-- También aquí
         let obj = {};
         headers.forEach((header, i) => {
           obj[header] = values[i];
@@ -54,16 +54,14 @@
       let html = '<table class="table table-bordered table-striped">';
       // Encabezado
       html += '<thead class="thead-dark"><tr>';
-      headers.forEach(h => {
-        html += `<th>${h}</th>`;
-      });
+      headers.forEach(h => { html += `<th>${h}</th>`; });
       html += '</tr></thead>';
       // Cuerpo
       html += '<tbody>';
       data.forEach(row => {
         html += '<tr>';
         headers.forEach(h => {
-          html += `<td>${row[h]}</td>`;
+          html += `<td>${row[h] || ''}</td>`;
         });
         html += '</tr>';
       });
